After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 684807 - Nautilus crash in in _g_utf8_normalize_wc (str=str@entry=0x0, max_len=max_len@entry=-1, mode=mode@entry=G_NORMALIZE_DEFAULT) at gunidecomp.c:374
Nautilus crash in in _g_utf8_normalize_wc (str=str@entry=0x0, max_len=max_le...
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: general
3.5.x
Other Linux
: Normal critical
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-09-25 18:20 UTC by Fabio Durán Verdugo
Modified: 2012-09-25 18:41 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Fabio Durán Verdugo 2012-09-25 18:20:29 UTC
Crash when typing and filtering in a Music folder.

Fedora 18, Nautilus 3.5.92


warning: File "/var/cache/abrt-di/usr/lib/debug/usr/lib/libltdl.so.7.3.0.debug" has a different build-id, file skipped
Core was generated by `/usr/libexec/nautilus-shell-search-provider'.
Program terminated with signal 11, Segmentation fault.

Thread 1 (Thread 0xb77958c0 (LWP 1802))

  • #0 _g_utf8_normalize_wc
    at gunidecomp.c line 374
  • #1 g_utf8_normalize
    at gunidecomp.c line 535
  • #2 prepare_string_for_compare
    at nautilus-shell-search-provider.c line 136
  • #3 search_add_volumes_and_bookmarks
    at nautilus-shell-search-provider.c line 389
  • #4 execute_search
    at nautilus-shell-search-provider.c line 465
  • #5 ffi_call_SYSV
    at ../src/x86/sysv.S line 64
  • #6 ffi_call
    at ../src/x86/ffi.c line 303
  • #7 g_cclosure_marshal_generic
    at gclosure.c line 1454
  • #8 g_closure_invoke
    at gclosure.c line 777
  • #9 signal_emit_unlocked_R
    at gsignal.c line 3551
  • #10 g_signal_emitv
    at gsignal.c line 3041
  • #11 _nautilus_shell_search_provider_skeleton_handle_method_call
    at nautilus-shell-search-provider-generated.c line 1428
  • #12 g_dbus_interface_method_dispatch_helper
    at gdbusinterfaceskeleton.c line 615
  • #13 skeleton_intercept_handle_method_call
    at gdbusinterfaceskeleton.c line 655
  • #14 call_in_idle_cb
    at gdbusconnection.c line 4737
  • #15 g_idle_dispatch
    at gmain.c line 4806
  • #16 g_main_dispatch
    at gmain.c line 2715
  • #17 g_main_context_dispatch
    at gmain.c line 3219
  • #18 g_main_context_iterate
    at gmain.c line 3290
  • #19 g_main_context_iteration
    at gmain.c line 3351
  • #20 g_application_run
    at gapplication.c line 1607
  • #21 main
    at nautilus-shell-search-provider.c line 801

Comment 1 Cosimo Cecchi 2012-09-25 18:41:08 UTC
Thanks for the report; I pushed a fix to git master and gnome-3-6 that should make this crash impossible to happen now.