shell-search-provider: warn against NULL strings before normalizing

Since g_mount_get_name() and nautilus_bookmark_get_name() can possibly
return NULL, warn against it before normalizing the string and trying to
compare it with the search terms. This fixes a crasher in the shell
search provider.

https://bugzilla.gnome.org/show_bug.cgi?id=684807