src/nautilus-shell-search-provider.c
@@ -315,6 +315,9 @@ search_add_volumes_and_bookmarks (NautilusShellSearchProviderApp *self)
     bookmark = nautilus_bookmark_list_item_at (self->bookmarks, idx);
 
     name = nautilus_bookmark_get_name (bookmark);
+    if (name == NULL)
+      continue;
+
     prepared = prepare_string_for_compare (name);
 
     found = TRUE;
@@ -393,6 +396,9 @@ search_add_volumes_and_bookmarks (NautilusShellSearchProviderApp *self)
     mount = l->data;
 
     query_text = g_mount_get_name (mount);
+    if (query_text == NULL)
+      continue;
+
     prepared = prepare_string_for_compare (query_text);
     g_free (query_text);
 
